<resources>
    <string name="app_name">Your Contacts</string>
    <string name="fab_name">Sort by name</string>
    <string name="placeholder_phone_number">+1 (123) 123 123 123</string>
    <string name="placeholder_email">john.doe@example.com</string>
    <string name="placeholder_address">One University Place\nChester 191013</string>
    <string name="placeholder_name">John Doe</string>
    <string name="add_contact">Add Contact</string>
    <string name="back">Back</string>
    <string name="add_new_contact">Add New Contact</string>
    <string name="update_contact">Update contact</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="title_activity_contact_details">ContactDetails</string>
    <string name="action_settings">Settings</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="delete">Delete</string>
    <string name="longpress_label_to_copy">Longpress label to copy</string>
    <string name="onboarding_title">Welcome to your Contacts App</string>
    <string name="onboarding_name_label">What is your name?</string>
    <string name="onboarding_explanation"><![CDATA[This is an app where you keep track of your contacts.\n\nPress on Add Contact to add a new contact. Only the name and the phone number are required. The contact will appear in the list.\n\nIf you click on a contact, a detail screen will open. Click on the labels to open the link, hold down to copy.\n\nOn the main screen you can sort the list by clicking the \"a>z\" button. Long press on a contact and it will ask to delete it.]]></string>
    <string name="add_demo_contacts">Add demo contacts</string>
    <string name="done">Done</string>
    <string name="website">Website</string>
</resources>