<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:baselineAligned="false"
    android:elevation="5dp"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/nameListDetail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:ellipsize="marquee"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:marqueeRepeatLimit="marquee_forever"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:text="@string/placeholder_name"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/phoneNumberListDetail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="5dp"
        android:text="@string/placeholder_phone_number"
        android:textAlignment="viewStart" />

    <TextView
        android:id="@+id/emailListDetail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="5dp"
        android:text="@string/placeholder_email"
        android:textAlignment="viewStart" />

    <TextView
        android:id="@+id/addressListDetail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="5dp"
        android:text="@string/placeholder_address"
        android:textAlignment="viewStart"
        android:visibility="gone" />

</LinearLayout>