<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactCreateUpdate">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.Contacts.NoActionBar"
        app:elevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|end"
                android:layout_marginStart="4dp"
                android:layout_weight="0"
                android:contentDescription="@string/back"
                android:minHeight="?actionBarSize"
                android:textAlignment="textEnd"
                app:icon="?attr/actionModeCloseDrawable" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|start"
                android:layout_weight="10"
                android:background="#00FFFFFF"
                android:minHeight="?actionBarSize"
                android:padding="16dp"
                android:text="@string/add_new_contact"
                android:textAlignment="textStart"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <Button
                android:id="@+id/save_contact_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|end"
                android:layout_marginEnd="4dp"
                android:layout_weight="0"
                android:minHeight="?actionBarSize"
                android:text="@string/save"
                android:textAlignment="textEnd"
                android:textAllCaps="false"
                android:textSize="14sp"
                app:icon="@android:drawable/ic_menu_save"
                app:iconPadding="0dp" />
        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="16dp"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clipToPadding="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/labelName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:labelFor="@id/textName"
                android:text="@string/name"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/textName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:autofillHints="name" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/labelPhoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:labelFor="@id/textPhoneNumber"
                android:text="@string/phone"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/textPhoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="phone"
                android:minHeight="48dp"
                android:autofillHints="phone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/labelEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:labelFor="@id/textEmail"
                android:text="@string/email"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/textEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:autofillHints="emailAddress" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/labelAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/textAddress"
                android:text="@string/address"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/textAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine|textPostalAddress"
                android:maxHeight="100dp"
                android:minHeight="48dp"
                android:autofillHints="postalAddress" />
        </LinearLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>