<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.Contacts.NoActionBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|start"
                android:layout_weight="10"
                android:background="#00FFFFFF"
                android:minHeight="?actionBarSize"
                android:padding="16dp"
                android:text="@string/app_name"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <Button
                android:id="@+id/add_contact_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|end"
                android:layout_marginEnd="4dp"
                android:layout_weight="0"
                android:minHeight="?actionBarSize"
                android:text="@string/add_contact"
                android:textAlignment="textEnd"
                android:textAllCaps="false"
                android:textSize="12sp" />
        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/contact_swipe_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clipToPadding="false">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/contact_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="?attr/actionBarSize"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="?attr/actionBarSize"
            android:clipToPadding="false"
            android:layoutAnimation="@anim/layout_animation_fall_down"
            android:paddingBottom="50dp"
            tools:listitem="@layout/contact_list_item" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_sort_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/fab_name"
        android:src="@android:drawable/ic_menu_sort_alphabetically"
        app:useCompatPadding="false" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>